--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "@testing-library/dom": "^6.2.0",
+    "@testing-library/react": "^9.1.4",
     "body-parser": "^1.18.3",
     "cors": "^2.8.3",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "jest-dom": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
